# wew

./: .gitignore  CMakeLists.txt  imgui.ini
shaders/: anim.vert  outline.frag  simple.frag  simple.vert
src/: main.cpp
src/animation/: AnimData.h  Animation.cpp  Animation.h  Animator.cpp  Animator.h  Bone.cpp  Bone.h  KeyFrame.h
src/components/: AnimationComponent.h  BoxColliderComponent.h  ColliderComponent.h  Component.h  LightComponent.h  MeshRenderer.cpp  MeshRenderer.h  PlayerControllerComponent.cpp  PlayerControllerComponent.h  RigidbodyComponent.cpp  RigidbodyComponent.h
src/core/: Engine.cpp  Engine.h  GameObject.h  Log.h  PhysicsEngine.cpp  PhysicsEngine.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  Transform.cpp  Transform.h  utils.h
src/editor/: ConsolePanel.h
src/graphics/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
